package gr2232.core;

interface HandleUserInterface {
  public boolean validateInputs(String username, String Password);
}
